--- a/etc/river.toml
+++ b/etc/river.toml
@@ -1,26 +1,20 @@
 # MySQL address, user and password
 # user must have replication privilege in MySQL.
-my_addr = "127.0.0.1:3306"
-my_user = "root"
-my_pass = ""
+db_host = "127.0.0.1:3306"
+db_user = "root"
+db_pass = ""
+
+# pseudo server id like a slave
+db_slave_id = 1001
 
 # Elasticsearch address
-es_addr = "127.0.0.1:9200"
+es_host = "127.0.0.1:9200"
 
 # Path to store data, like master.info, and dump MySQL data 
 data_dir = "./var"
 
 # Inner Http status address
 stat_addr = "127.0.0.1:12800"
-
-# pseudo server id like a slave 
-server_id = 1001
-
-# mysql or mariadb
-flavor = "mysql"
-
-# mysqldump execution path
-mysqldump = "mysqldump"
 
 # MySQL data source
 [[source]]
