--- a/glide.yaml
+++ b/glide.yaml
@@ -18,5 +18,7 @@ import:
   - require
 - package: gopkg.in/olivere/elastic.v3
   version: ~3.0.45
+- package: github.com/takama/daemon
+  repo: git@github.com:ehalpern/daemon.git
 testImport:
 - package: gopkg.in/check.v1
